Changed About Us Filename

--- a/fintech/aboutus/templates/aboutus_base.html
+++ b/fintech/aboutus/templates/aboutus_base.html
@@ -5,7 +5,7 @@
   <!-- Required Meta Tags -->
   <meta charset="utf-8">
   <meta name="viewpoint" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Fintech Landing Page">
+  <meta name="description" content="Fintech About Page">
   <meta name="keywords" content="HTML, CSS, XML, JavaScript">
   <meta name="author" content="LogicLoop">
   <meta name="viewpoint" content="cd /width-device-width, initial-scale=1.0">
