basic routes and files done

--- a/fintech/aboutus/templates/fintech_about_navbar.html
+++ b/fintech/aboutus/templates/fintech_about_navbar.html
@@ -9,9 +9,9 @@
 		<i class="fa-solid fa-paper-plane"></i>
 		<p class="company_name">FINTECH ENGINEERING</p>
 	</div>
-	<p class="company_home" onclick="window.location.href='{{url_for('fintech_home.landing')}}'">HOME</p>
-	<p class="company_about">ABOUT US</p>
-	<p class="company_contact">CONTACT US</p>
+	<p class="company_home" onclick="window.location.href='{{url_for('fintech_aboutus.temphome')}}'">HOME</p>
+	<p class="company_about" onclick="window.location.href='{{url_for('fintech_aboutus.aboutus')}}'">ABOUT US</p>
+	<p class="company_contact" onclick="window.location.href='{{url_for('fintech_aboutus.tempcontactus')}}'">CONTACT US</p>
 	<div class="login">
 		<i class="fa-solid fa-user"></i>
 		<p class="company_login">Login</p>
