--- a/fintech/login/templates/login_base.html
+++ b/fintech/login/templates/login_base.html
@@ -5,7 +5,7 @@
   <!-- Required Meta Tags -->
   <meta charset="utf-8">
   <meta name="viewpoint" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Fintech About Page">
+  <meta name="description" content="Fintech Landing Page">
   <meta name="keywords" content="HTML, CSS, XML, JavaScript">
   <meta name="author" content="LogicLoop">
   <meta name="viewpoint" content="cd /width-device-width, initial-scale=1.0">
@@ -22,7 +22,7 @@
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/v4-font-face.min.css"/>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/v4-shims.min.css"/>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/v5-font-face.min.css"/>
-  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/fintech/aboutus/style.css')}}"/>
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/fintech/home/style.css')}}"/>
   <title>{% block title %}{% endblock %}</title>
   <!-- -->
 
