--- a/fintech/home/templates/home_base.html
+++ b/fintech/home/templates/home_base.html
@@ -4,11 +4,10 @@
 <head>
   <!-- Required Meta Tags -->
   <meta charset="utf-8">
-  <meta name="viewpoint" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Fintech Landing Page">
   <meta name="keywords" content="HTML, CSS, XML, JavaScript">
   <meta name="author" content="LogicLoop">
-  <meta name="viewpoint" content="cd /width-device-width, initial-scale=1.0">
+  <meta name="viewport" content="width-device-width, initial-scale=1.0 shrink-to-fit=no">
   <!-- -->
 
   <!-- CDN Deployedment-->
